--- a/views/new.pug
+++ b/views/new.pug
@@ -2,6 +2,7 @@ extends layout
 
 block content
   form(method="post", action="/schedules")
+    input(type="hidden" name="_csrf" value!=csrfToken)
     div
       h5 予定名
       input(type="text" name="scheduleName")
